tests/snapshots/integration__explain_renders_passthrough.snap
---
source: tests/integration.rs
assertion_line: 3238
expression: stdout
---
program:   llama-server  (alias: bench)
config:    jig.kdl
selected:  qwen

resolved:
  llama-server [1] --host 0.0.0.0 [2] -m qwen.gguf [3] -a --test

  [1]  --host 0.0.0.0
        defaults  jig.kdl:2

  [2]  -m qwen.gguf
        qwen  jig.kdl:5

  [3]  -a --test
        from command line
