tests/snapshots/integration__list_renders_full_profile_sub_block.snap
---
source: tests/integration.rs
expression: stdout
---
config:   jig.kdl

llama-server  (alias: serve)
  cwd:      /srv
  env:      -u OLD OLLAMA_HOST=0.0.0.0
  defaults: --host 0.0.0.0
  profiles:
    qwen-coder
      env:  CUDA_VISIBLE_DEVICES=0
      args: -m /models/qwen-coder.gguf
    qwen-coder-large  (extends qwen-coder)
      cwd:  src
      args: -m /models/qwen-coder-large.gguf
