tests/snapshots/integration__list_renders_spec_5_1_example_shape.snap
---
source: tests/integration.rs
expression: stdout
---
llama-server  (alias: serve)
  defaults: --host 0.0.0.0 --port 8090 -c 32768 --flash-attn
  profiles:
    qwen-coder
      args: -m /models/qwen-coder.gguf -ngl 999 -ts '0.5,0.5'
    llama3
      args: -m /models/llama3.gguf --port 8091
