tests/snapshots/integration__list_shows_extends_on_inheriting_profile.snap
---
source: tests/integration.rs
expression: stdout
---
config:   jig.kdl

llama-server  (alias: serve)
  defaults: --host 0.0.0.0
  profiles:
    qwen-coder
      args: -m /models/qwen-coder.gguf -ngl 999
    qwen-coder-large  (extends qwen-coder)
      args: -m /models/qwen-coder-large.gguf
